[package]
name = "lighter-rs"
version = "0.1.0"
edition = "2021"
authors = ["Lighter Contributors"]
description = "Rust SDK for Lighter Protocol - A comprehensive trading library for blockchain"
license = "MIT"
repository = "https://github.com/elliottech/lighter-rs"
keywords = ["blockchain", "trading", "lighter", "crypto", "defi"]
categories = ["cryptography", "api-bindings"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }

# WebSocket Client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Cryptography
hex = "0.4"
sha2 = "0.10"
# Note: Poseidon crypto will need to be added as a git dependency or local implementation
# For now, we'll use placeholder traits

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = "0.4"

# Numeric types
num-bigint = "0.4"
num-traits = "0.2"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
dotenv = "0.15"

[lib]
name = "lighter_rs"
path = "src/lib.rs"
